# 3D_Rad_Space

./: .gitignore  3D Rad Space R3.rar  3DRadSpace P1.rar  3DRadSpace P2.rar  3D_Rad_newversions.rar  LICENSE  README  README.md  Run MGCB.bat
3DRadSpace/: 3DRadSpace.csproj  3DRadSpace.sln  3DRadSpace.sln.DotSettings  3DRadSpaceCompiler.Designer.cs  3DRadSpaceCompiler.cs  3DRadSpace_EditorClass.cs  AboutWindow.Designer.cs  AboutWindow.cs  AboutWindow.resx  CMakeLists.txt  Camera.Designer.cs  Camera.cs  EOL.Designer.cs  EOL.cs  EOL.resx  EditMenuStrip.Designer.cs  EditMenuStrip.cs  FileMenuStrip.Designer.cs  FileMenuStrip.cs  Fog.Designer.cs  Fog.cs  Game1.cs  GlobalSuppressions.cs  HelpMenuStrip.Designer.cs  HelpMenuStrip.cs  OBJR.Designer.cs  OBJR.cs  ObjectsInProject.Designer.cs  ObjectsInProject.cs  ObjectsList.Designer.cs  ObjectsList.cs  OptionsDialog.Designer.cs  OptionsDialog.cs  OptionsMenuStrip.Designer.cs  OptionsMenuStrip.cs  PlayTestingLauncher.Designer.cs  PlayTestingLauncher.cs  Program.cs  Read me.txt  Script.Designer.cs  (+12 more)
3DRadSpace/3DRadSpace/: 3DRadSpace.csproj  3DRadSpace.sln  AboutBox.Designer.cs  AboutBox.cs  AboutBox.resx  AddObject.Designer.cs  AddObject.cs  AddObject.resx  AddObjectWnd.Designer.cs  AddObjectWnd.cs  AssemblyInfo.cs  CameraW.Designer.cs  CameraW.cs  CameraWnd.Designer.cs  CameraWnd.cs  Compiler_SelectMainProject.Designer.cs  Compiler_SelectMainProject.cs  CounterW.Designer.cs  CounterW.cs  CounterWnd.Designer.cs  CounterWnd.cs  DiscordRichPresence.cs  Editor.cs  EditorEvents.cs  EditorGraphicalInterface.cs  EditorUI.Designer.cs  EditorUI.cs  EditorUIEvents.cs  EmptyObjWnd.Designer.cs  EmptyObjWnd.cs  EventEditor.Designer.cs  EventEditor.cs  EventOnKeyW.Designer.cs  EventOnKeyW.cs  EventOnLocationW.Designer.cs  EventOnLocationW.cs  EventOpcodeEditor.Designer.cs  EventOpcodeEditor.cs  ExitFadeW.Designer.cs  ExitFadeW.cs  (+55 more)
3DRadSpace/3DRadSpaceDll/: 3DRadSpaceDll.csproj  3DRadSpaceDll.vcxproj  3DRadSpaceDll.vcxproj.filters  Camera.cpp  Camera.cs  Camera.h  Camera.hpp  Camera2D.cs  Color.cpp  Color.h  Color.hpp  ComplexNumber.cpp  ComplexNumber.h  ComplexNumber.hpp  Counter.cs  CppScript.cpp  CppScript.h  CppScript.hpp  CustomObjectInfo.cs  EventOnKey.cs  EventOnLocation.cs  EventOnValue.cs  ExitFade.cs  FPVCamera.cs  Fog.cs  Game.cpp  Game.h  Game.hpp  GameObject.cs  GameSettings.cs  Game_DX11.cpp  Game_DX11.h  Globals.h  Globals.hpp  Group.cs  ICustomGameObject.cs  IObject.cpp  IObject.h  IObject.hpp  IObjectReflection.cpp  (+98 more)
3DRadSpace/3DRadSpaceDll_Tests/: 3DRadSpaceDll_Tests.vcxproj  LinearAlgebraTests.cpp  ReflectionTests.cpp  cpp.hint  pch.h
3DRadSpace/3DRadSpaceInstaller/: 3DRadSpaceInstaller.vdproj
3DRadSpace/3DRadSpacePlayer/: 3DRadSpacePlayer_OpenGL.csproj  Program.cs
3DRadSpace/3DRadSpace_CSharp/: 3DRadSpace_CSharp.csproj  Color.cs  Game.cs  GraphicsDevice.cs  Viewport.cs  Window.cs
3DRadSpace/3DRadSpace_CSharp_Tests/: 3DRadSpace_CSharp_Tests.csproj  UnitTest1.cs
3DRadSpace/3DRadSpace_Editor_WINDX11/: 3DRadSpace_Editor_WINDX11.vcxproj  3DRadSpace_Editor_WINDX11.vcxproj.filters  AddObjectDialog.cpp  AddObjectDialog.hpp  CameraEditorWindow.cpp  CameraEditorWindow.h  CameraEditorWindow.hpp  ColorBox.cpp  ColorBox.hpp  Comments.h  DownloadStatusWindow.cpp  DownloadStatusWindow.h  DownloadStatusWindow.hpp  EditableField.cpp  EditableField.hpp  EditableFieldCollection.cpp  EditableFieldCollection.hpp  EditableFieldValue.hpp  GDIFuncs.cpp  GDIFuncs.hpp  IObjectEditorWindow.cpp  IObjectEditorWindow.hpp  ISubclassedControl.cpp  ISubclassedControl.hpp  Libs.h  Libs.hpp  Main.cpp  Main.h  Main.hpp  MainWindow.cpp  MainWindow.hpp  NumericTextbox.cpp  NumericTextbox.hpp  ObjectEditorDialog.cpp  ObjectEditorDialog.hpp  ObjectEditorWindow.cpp  ObjectEditorWindow.hpp  RCa29704  Resources.rc  UpdateDownloadManager.cpp  (+11 more)
3DRadSpace/3DRadSpace_Editor_WindowsDX11/: 3DRadSpace_Editor_WindowsDX11.rc  3DRadSpace_Editor_WindowsDX11.vcxproj  3DRadSpace_Editor_WindowsDX11.vcxproj.filters  AddObjectDialog.cpp  AddObjectDialog.hpp  AssetControl.cpp  AssetControl.hpp  AssetListRenderer.cpp  AssetListRenderer.hpp  AssetManager.cpp  AssetManager.hpp  AssetRenderer.cpp  AssetRenderer.hpp  CMakeLists.txt  ColorBox.cpp  ColorBox.hpp  Dialog.cpp  Dialog.hpp  EditObjectDialog.cpp  EditObjectDialog.hpp  EditorWindow.cpp  EditorWindow.hpp  GDIFuncs.cpp  GDIFuncs.hpp  HelperFunctions.cpp  HelperFunctions.hpp  IControl.cpp  IControl.hpp  Includes.hpp  Main.cpp  ModelControl.cpp  ModelControl.hpp  NumericTextbox.cpp  NumericTextbox.hpp  RenderWindow.cpp  RenderWindow.hpp  SkinmeshPreviewer.cpp  SkinmeshPreviewer.hpp  TextureControl.cpp  TextureControl.hpp  (+2 more)
3DRadSpace/3DRadSpace_Player/: 3DRadSpace_Player.csproj  Game1.cs  Program.cs
3DRadSpace/3DRadSpace_Player_DX/: 3DRadSpace_Player_DX.csproj  Game1.cs  Program.cs  app.manifest
3DRadSpace/3DRadSpace_Player_b/: Game1.cs  app.manifest
3DRadSpace/3DRadSpace_Plugin_Sample/: CMakeLists.txt
3DRadSpace/3DRadSpace_ProjectFileCompiler/: 3DRadSpace_ProjectFileCompiler.cpp  3DRadSpace_ProjectFileCompiler.vcxproj  3DRadSpace_ProjectFileCompiler.vcxproj.filters
3DRadSpace/Content/: Axis.x  Axis.xnb  Content.mgcb
3DRadSpace/Debug/: 3DRadSpaceConsoleEditor.ilk  3DRadSpace_ProjectFileCompiler.ilk  debug_with_params.bat
3DRadSpace/Engine3DRadSpace/: 3DRadSpace.hpp  BasicTextured_NBT.cpp  BasicTextured_NBT.hpp  BlankShader.cpp  BlankShader.hpp  Blank_NoMatrix.cpp  Blank_NoMatrix.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Concepts.hpp  DepthStencilState.hpp  Engine3DRadSpace.vcxproj  Engine3DRadSpace.vcxproj.filters  Error.cpp  Error.hpp  Exception.hpp  Game.cpp  Game.hpp  GameWindow.cpp  GameWindow.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  IDrawable.hpp  IDrawable2D.hpp  IDrawable3D.hpp  IGraphicsDevice.hpp  IInitializable.hpp  ILoadable.hpp  IObject.cpp  IObject.hpp  IObject2D.cpp  IObject2D.hpp  IObject3D.cpp  IObject3D.hpp  IShader.cpp  IShader.hpp  IUpdateable.cpp  IUpdateable.hpp  (+62 more)
3DRadSpace/Engine3DRadSpace_Tests/: AnyTests.cpp  CMakeLists.txt  EditDistanceTest.cpp  EmptyGameClass.cpp  EventTests.cpp  (+15 more)
(+677 files in other folders)
